<resources>
    <string name="app_name">Notes Maker</string>
    <string name="todo">TODO</string>
    <string name="no_data_available">No data available ! ! !</string>
    <string name="title">Title</string>
    <string name="description">Description</string>

    <string name="search_here">Search here....</string>
    <string name="clear">clear</string>
    <string name="no_data">no_data</string>
    <string name="add_note">Add Note</string>
    <string name="choose_color">Choose Color</string>
    <string name="some_text">Lorem Ipsum is simply dummy text of
        the printing and typesetting industry. Lorem Ipsum has been
        the industry\'s standard dummy text ever since the 1500s,
        when an unknown printer took a galley of type and scrambled
        it to make a type specimen book. It has survived not only five
        centuries, but also the leap into electronic typesetting,
        remaining essentially unchanged.
    </string>
    <string name="edited_on">Edited on: %1$s</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="my_notes">My Notes</string>
    <string name="dd_mm_yy">dd-mm-yy</string>
    <string name="save_note">Save Note</string>
    <string name="back_button">Back Button</string>
</resources>